@startuml

title __CAMERA's Class Diagram__\n

  namespace com.gykj.cameramodule {
    namespace activity.camera {
      class com.gykj.cameramodule.activity.camera.CameraActivity {
          {static} + CANCEL : int
          {static} + FAIL : int
          {static} + SUCCESS : int
          # MANIFEST_PERMISSION : String[]
          ~ MANIFEST_STORAGE : String[]
          ~ handler : Handler
          {static} - ENVIRONMENT_ERROR : int
          - OPERATION_FLAG : int
          {static} - SAVE_FAIL : int
          {static} - SAVE_SUCCESS : int
          {static} - TAKE_ERROR : int
          {static} - TAKE_SUCCESS : int
          - _serviceLocation : ServiceLocation
          - areaCode : String
          - areaName : String
          - areaNameUrl : String
          - bitmap : Bitmap
          - extendName : String
          - filePath : String
          - imgPath : ArrayList<String>
          - isBatch : boolean
          - isOrdinary : boolean
          - ivImgCancel : ImageView
          - ivImgSelect : ImageView
          - photoFiles : ArrayList<PhotoFile>
          - reverseCamera : ImageButton
          - rlCamera : RelativeLayout
          - rlRes : LinearLayout
          - rotate : int
          - sweetAlertDialog : SweetAlertDialog
          - takePicBtn : ImageButton
          - waterMarkerText : String
          - waterMarks : Object[]
          + autoFocus()
          + finish()
          + getPhotoResult()
          + onBackPressed()
          + onClick()
          + onEventMainThread()
          + onRequestPermissionsResult()
          # initClass()
          # initialize()
          # onCreate()
          # onDestroy()
          # onPause()
          # onResume()
          # registerEvent()
          - checkCamera()
          - destroy()
          - doSomeBackGround()
      }
    }
  }
  

  namespace com.gykj.cameramodule {
    namespace activity.camera {
      class com.gykj.cameramodule.activity.camera.CameraActivity.NoWeakHandler {
          - mWeakReference : WeakReference<CameraActivity>
          + handleMessage()
          ~ NoWeakHandler()
      }
    }
  }
  

  com.gykj.cameramodule.activity.camera.CameraActivity .up.|> android.view.View.OnClickListener
  com.gykj.cameramodule.activity.camera.CameraActivity .up.|> com.gykj.cameramodule.activity.camera.view.CameraSurfaceView.IPhotoCallBack
  com.gykj.cameramodule.activity.camera.CameraActivity .up.|> com.gykj.cameramodule.activity.camera.view.RectOnCamera.IAutoFocus
  com.gykj.cameramodule.activity.camera.CameraActivity -up-|> com.gykj.base.activity.BaseActivity
  com.gykj.cameramodule.activity.camera.CameraActivity o-- com.gykj.cameramodule.activity.camera.view.CameraSurfaceView : mCameraSurfaceView
  com.gykj.cameramodule.activity.camera.CameraActivity o-- com.gykj.cameramodule.activity.camera.view.RectOnCamera : mRectOnCamera
  com.gykj.cameramodule.activity.camera.CameraActivity o-- com.gykj.base.photoview.PhotoView : pvRes
  com.gykj.cameramodule.activity.camera.CameraActivity +-down- com.gykj.cameramodule.activity.camera.CameraActivity.NoWeakHandler
  com.gykj.cameramodule.activity.camera.CameraActivity.NoWeakHandler -up-|> android.os.Handler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
